[package]
name = "wschat"
version = "0.1.0"
edition = "2021"

[dependencies]
ws = { version = "0.9.2" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132" }
chrono = { version = "0.4.38", features = ["serde", "now"] }
uuid = { version = "1.11.0", features = ["serde"] }
log = "0.4.22"
colog = "1.3.0"
